2004-06-10  Murray Cumming  <murrayc@murrayc.com>

	* po/de.po: German translation from Hendrik Brandt.

2004-06-09  Murray Cumming  <murrayc@murrayc.com>

	* Mode menu: removed the Design Mode.
	* Developer menu: Added Fields, Relatationships, Users, and Layout, to 
	show the same functionality in secondary windows.

2004-06-09  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2004-06-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.[h|cc], glom/Document/Document_Glom.[h|cc], and 
	others: The AppState (User Level) is now dependent on the document so 
	different instances (each with 1 document) can have different 
	user levels. And the user level is Operator if the file is read-only.
	* glom/Navigation/Box_DB_Tables.cc: Enable/Disable the extra UI in 
	fill_from_database() instead of the constructor, so that they are 
	changed when the user level changes. The table title is not yet shown 
	instead of the table name when in operator mode.

2004-06-08  Murray Cumming  <murrayc@murrayc.com>

	* Changed all source code filenames to lowercase, because it was 
	getting ugly, and imported into GNOME cvs.

0.8.0:

2004-06-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: init_menus(): Give Mode/Find a control-F 
	shortcut. Find does not work yet.
	* glom/Mode_Design/Box_Table_FieldDefinitions: Show the field titles 
	in the list of fields.
	* Changed all std::strings to Glib::ustrings. Thanks regexxer.
	* glom/Document/Document_Glom.cc set_data_layout_groups(): Really save 
	the groups.

2004-06-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/Data_Structure/Field.cc: sql(): Put quotes around dates and 
	time, so that entering them works in Date mode.

2004-06-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/Document/Document_Glom.cc: set_tables(): Removed old code that 
	caused tables to always be marked as hidden.
	* glom/Mode_Data/Box_Data_Details.cc: Change Related Records frame to
	HIG-style.
