@@ -17,7 +17,7 @@ AM_SANITY_CHECK
 #Internationalisation:
 GETTEXT_PACKAGE=glom
 AC_SUBST(GETTEXT_PACKAGE)
-ALL_LINGUAS="de sv"
+ALL_LINGUAS="de it sv"
 AM_GLIB_GNU_GETTEXT
 AC_PROG_INTLTOOL
 
